Rajout des fichiers google
premier test rajout des fichiers du site google

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-Hello World
+<DOCTYPE html>
+	<head>
+        <meta charset="utf-8">
+        <title>Googlebymoi</title>
+        <link href="style.css" rel="stylesheet">
+    </head>
+        <body>
+            <nav>
+                <div class="conteneur">
+                    <a href="https://www.gmail.com">Gmail</a>
+                    <a href="https://www.google.fr/imghp?hl=fr&ogbl">Images</a>
+                    <image src="" class="grille" focusable="false" viewBox="0 0 24 24"></image>
+                    <image src="google grille et bouton haut droite.png"></image>
+                </div>
+            </nav>
+        <br>
+    <header>
+        	<div class="logo">
+					<image src="googlelogo_color_272x92dp.png">
+          </div>
+    </header>
+      <br>
+    <main>
+        <div class="bar">
+          <input class="searchbar" type="text" title="Search">
+          <a href="#"> <img class="voice" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Google_mic.svg/716px-Google_mic.svg.png" title="Search by Voice"></a>
+        </div>
+          <div class="buttons">
+            <button class="button" type="button">Recherche</button>
+            <button class="button" type="button">J'ai d'la chance</button>
+          </div> 
+    </main>
+          <div class="milieu"></div>
+    <footer>
+        <div class="bas1">
+          <p>France</p>
+        </div>
+          <div class="bas2">
+            <img src="feuille verte.png">
+            <a href="https://www.google.fr/imghp?hl=fr&ogbl">Nos objectifs en matière de développement durable</a>
+          </div>
+            <div class="bas3">
+              <a href="https://about.google/?utm_source=google-FR&utm_medium=referral&utm_campaign=hp-footer&fg=1">A propos</a>
+              <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Publicité</a>
+              <a href="https://smallbusiness.withgoogle.com/intl/fr_fr/?subid=fr-fr-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google&utm_medium=ep&utm_campaign=google_hpbfooter&utm_content=google_hpbfooter&gmbsrc=fr-fr-et-gs-z-gmb-s-z-u~sb-g4sb_srvcs-u#!/">Entreprise</a>
+              <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google ?</a>
+            </div>
+            <div class="bas3">
+              <a href="https://support.google.com/legal/answer/3110420?hl=fr&fg=1">Signaler un contenu inaproprié</a>
+              <a href="https://support.google.com/websearch/answer/7585859?hl=fr&fg=1&visit_id=638089597034721947-375265909&p=fr_consumer_info&rd=1">info consommateur</a>
+              <a href="https://policies.google.com/privacy?hl=fr&fg=1>Confidentialité"></a>
+              <a href="https://policies.google.com/terms?hl=fr&fg=1">Conditions</a>
+            </div>
+    </footer>
+        </body> 
+        
